Only css changes

--- a/resources/app.css
+++ b/resources/app.css
@@ -1,4 +1,11 @@
+body{
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto", Arial, sans-serif;
+    font-size: 16px;
+}
 
-.redText{
-    color: red;
+.main {
+    width: 75%;
+    margin: 32px auto;
 }
