Added routing functionality

--- a/resources/app.css
+++ b/resources/app.css
@@ -5,7 +5,17 @@ body{
     font-size: 16px;
 }
 
-.main {
+.main, header nav {
     width: 75%;
     margin: 32px auto;
+}
+
+header nav a {
+    color: #233dcb;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+header nav a:hover {
+    color: #41abf2;
 }
